p4 finished (img errors)

--- a/practica-3/p3.html
+++ b/practica-3/p3.html
@@ -13,6 +13,11 @@
 	<link rel="stylesheet" type="text/css" href="../css/layout.css">
 	<link rel="stylesheet" type="text/css" href="../css/w3.css">
 
+	<style>
+		#home {width: 46px; height: 44px; background: url(img_navsprites.gif) 0 0;
+		}
+	</style>
+
 	<title> Práctica No. 3 </title>
 </head>
 
@@ -47,86 +52,89 @@
 
 				<h2> <b> Ejemplos de flores: </b> </h2>
 
-<!-- 1 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+<div class="w3-container w3-center">
+
+<!-- 1 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-right">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Amarillis</div>
 					<a href="amarillis.html">
-						<img src="extra/Amaryllis_Belladona.jpg" alt="Amarillis" style="width:100%">
+						<img src="extra/Amaryllis_Belladona.jpg" alt="Amarillis" style="width:282px;height:188px;">
 					</a>
 				</div>
 			</div>
 
-<!-- 2 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+<!-- 2 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-left w3-padding-right">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Anemone</div>
 					<a href="anemone.html">
-						<img src="extra/anemone-narcissiflora.jpg" alt="Anemone" style="width:100%">
+						<img src="extra/anemone-narcissiflora.jpg" alt="Anemone" style="width:282px;height:188px;">
 					</a>
 				</div>
 			</div>
 
-<!-- 3 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+<!-- 3 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-left">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Clavel</div>
 					<a href="clavel.html">
-						<img src="extra/clavel.jpg" alt="Carnation" style="width:100%">
+						<img src="extra/clavel.jpg" alt="Carnation" style="width:282px;height:188px;">
 					</a>
 				</div>
-			</div>
+			</div> 
 
-<!-- 4 -->	<div class="w3-col l3 m6 w3-margin-bottom">
-				<div class="w3-display-container">
-					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Dianthus</div>
-					<a href="amarillis.html">
-						<img src="extra/dianthus.jpg" alt="Amarillis" style="width:100%">
-					</a>
-				</div>
-			</div>
+</div>
 
-<!-- 5 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+<div class="w3-container w3-center">
+
+<!-- 4 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-right">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Rice Lilly</div>
-					<a href="fritillaria.html">
-						<img src="extra/fritillaria.jpg" alt="Rice Lilly" style="width:100%">
+					<a href="rice_lilly.html">
+						<img src="extra/fritillaria.jpg" alt="Rice-Lilly" style="width:282px;height:188px;">
 					</a>
 				</div>
 			</div>
 
-<!-- 6 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+<!-- 5 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-left">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Girasol</div>
 					<a href="girasol.html">
-						<img src="extra/girasol.jpg" alt="girasol" style="width:100%">
+						<img src="extra/girasol.jpg" alt="Girasol" style="width:282px;height:188px;">
 					</a>
 				</div>
 			</div>
 
-<!-- 7 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+			</div>
+
+<div class="w3-container w3-center">
+
+<!-- 6 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-right">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Lotus</div>
 					<a href="lotus.html">
-						<img src="extra/lotus.jpg" alt="Lotus" style="width:100%">
+						<img src="extra/lotus.jpg" alt="Lotus" style="width:282px;height:188px;">
 					</a>
 				</div>
 			</div>
 
-<!-- 8 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+<!-- 7 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-left w3-padding-right">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Nomeolvides</div>
 					<a href="forgetmenot.html">
-						<img src="extra/Myosotis_sylvatica.jpg" alt="Forget-me-not" style="width:100%">
+						<img src="extra/Myosotis_sylvatica.jpg" alt="Forget-me-not" style="width:282px;height:188px;">
 					</a>
 				</div>
 			</div>
 
-<!-- 9 -->	<div class="w3-col l3 m6 w3-margin-bottom">
+<!-- 8 -->	<div class="w3-col l3 m6 w3-margin-bottom w3-padding-left w3-padding-right">
 				<div class="w3-display-container">
 					<div class="w3-display-topleft w3-ian-green w3-padding" style="border-radius:6px;">Rosa</div>
 					<a href="rosa.html">
-						<img src="extra/rosa.jpeg" alt="Rosa" style="width:100%">
+						<img src="extra/rosa.jpeg" alt="Rosa" style="width:282px;height:188px;">
 					</a>
 				</div>
 			</div>
+
+</div>
 
 		</article>
 
@@ -134,9 +142,9 @@
 
 	<br><br><br><br>
 	<div class="footer">
-		<div class="w3-bar w3-bottom w3-light-gray w3-wide w3-padding-8 w3-card-2">
-			<a href="../index.html" class="w3-margin-left w3-bar-item w3-button"> <b> Ian Svén </b> </a>
-		</div>
+		<div class="w3-bar w3-bottom w3-light-gray w3-wide w3-padding-8 w3-card-2"> <center>
+			<a href="../index.html" class="w3-margin-left w3-bar-item w3-button"> <b> <img id="home" src="extra/nav_home.gif"> </b> </a>
+		</div> </center>
 	</div>
 
 </body>
