--- a/practica-4/p4.html
+++ b/practica-4/p4.html
@@ -31,7 +31,7 @@
                 <li> <a href="elite.html" class=w3-button> Elite </a> </li>
                 <li> <a href="grunt.html" class=w3-button> Grunts </a> </li>
                 <li> <a href="hunter.html" class=w3-button> Hunter </a> </li>
-                <li> <a href="jackal.html" class=w3-button> Dackal </a> </li>
+                <li> <a href="jackal.html" class=w3-button> Jackal </a> </li>
                 <li> <a href="profeta.html" class=w3-button> Prophet </a> </li>
             </ul>
             </ul>
@@ -45,7 +45,7 @@
 
 			<div class="bio">
 
-				<p> ¿Ya me puedes decir qué era lo que te molestaba de mí? <br> <i> piu piu </i> </p>
+				<p> Esto aún no ha sido comenzado, salga de aquí por favor. <br> <i> piu piu </i> </p>
 
 			</div>
 
