--- a/practica-3/p3.html
+++ b/practica-3/p3.html
@@ -14,8 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/w3.css">
 
 	<style>
-		#home {width: 46px; height: 44px; background: url(img_navsprites.gif) 0 0;
-		}
+		#home {width: 46px; height: 44px; background: url(img_navsprites.gif) 0 0;}
 	</style>
 
 	<title> Práctica No. 3 </title>
@@ -32,6 +31,7 @@
 				<li> <a href="../practica-2/p2.html" class=w3-button> Práctica 2 </a> </li>
 				<li> <a href="#" class=w3-button> Práctica 3 </a> </li>
 				<li> <a href="../practica-4/p4.html" class=w3-button> Práctica 4 </a> </li>
+				<li> <a href="../practica-5/p5.html" class=w3-button> Práctica 5 </a> </li>
             </ul>
 		</nav>
 
