--- a/practica-5/p5.html
+++ b/practica-5/p5.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Práctica 5 - Menú">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="extra/icon.ico">
+        <link rel="shortcut icon" href="extra/num.png">
         <link rel="stylesheet" type="text/css" href="extra/style-p5.css">
         <link rel="stylesheet" type="text/css" href="../css/layout.css">
         <link rel="stylesheet" type="text/css" href="../css/w3.css">
@@ -14,7 +14,7 @@
         <title> Práctica No. 5 </title>
     </head>
 
-    <body background="extra/">
+    <body>
 
 	<div class="flex-container">
 
@@ -26,34 +26,117 @@
 				<li> <a href="../practica-3/p3.html" class=w3-button> Práctica 3 </a> </li>
 				<li> <a href="../practica-4/p4.html" class=w3-button> Práctica 4 </a> </li>
 				<li> <a href="#" class=w3-button> Práctica 5 </a> </li>
+				<li> <a href="../practica-6/p6.html" class=w3-button> Práctica 6 </a> </li>
             </ul>
 		</nav>
 
 		<header> <h1 style="color:#FFFFFF;text-shadow:none;"> <b> Práctica 5 </b> </h1> </header>
 
-			<h1> <strong> Números importantes de las matemáticas </strong> </h1>
+			<h1> <strong> Números naturales </strong> </h1>
 			<article class="article">
 			
+			<!-- <div class=w3-center> -->
 			<table style="width:100%">
 				<tr>
-					<th>Número</th>
-					<th>Símbolo</th>
-					<th>Masa</th>
-					<th>Carga</th>
-					<th>Spin</th>
-					<th>Generación</th>
+					<th bgcolor="80ccff">Cardinal</th>
+					<th bgcolor="ccebff">Ordinal</th>
+					<th bgcolor="80ccff" width="45px">Japonés</th>
+					<th bgcolor="ccebff" width="40px">Chino</th>
+					<th bgcolor="80ccff">Inglés</th>
+					<th bgcolor="ccebff">Maya</th>
+					<th bgcolor="80ccff" width="30px">Binario</th>
 				</tr>
 				<tr>
-					<td>Jill</td>
-					<td>Smith</td>
-					<td>50</td>
+					<td bgcolor="ccebff">Cero</td>
+					<td bgcolor="b3d8fd">n/a</td>
+					<td bgcolor="ccebff">ゼロ</td>
+					<td bgcolor="b3d8fd">零</td>
+					<td bgcolor="ccebff">Zero</td>
+					<td bgcolor="b3d8fd"><img src="extra/cero-maya.png"></td>
+					<td bgcolor="ccebff">0</td>	
 				</tr>
 				<tr>
-					<td>Eve</td>
-					<td>Jackson</td>
-					<td>94</td>
+					<td bgcolor="b3d8fd">Uno</td>
+					<td bgcolor="ccebff">Primero</td>
+					<td bgcolor="b3d8fd">一</td>
+					<td bgcolor="ccebff">壹</td>
+					<td bgcolor="b3d8fd">One</td>
+					<td bgcolor="ccebff"><img src="extra/uno-maya.png"></td>
+					<td bgcolor="b3d8fd">1</td>
 				</tr>
-			</table> 
+				<tr>
+					<td bgcolor="ccebff">Dos</td>
+					<td bgcolor="b3d8fd">Segundo</td>
+					<td bgcolor="ccebff">二</td>
+					<td bgcolor="b3d8fd">貳</td>
+					<td bgcolor="ccebff">Two</td>
+					<td bgcolor="b3d8fd"><img src="extra/dos-maya.png"></td>
+					<td bgcolor="ccebff">10</td>
+				</tr>
+				<tr>
+					<td bgcolor="b3d8fd">Tres</td>
+					<td bgcolor="ccebff">Tercero</td>
+					<td bgcolor="b3d8fd">三</td>
+					<td bgcolor="ccebff">叄</td>
+					<td bgcolor="b3d8fd">Three</td>
+					<td bgcolor="ccebff"><img src="extra/tres-maya.png"></td>
+					<td bgcolor="b3d8fd">11</td>
+				</tr>
+				<tr>
+					<td bgcolor="ccebff">Cuatro</td>
+					<td bgcolor="b3d8fd">Cuarto</td>
+					<td bgcolor="ccebff">四</td>
+					<td bgcolor="b3d8fd">肆</td>
+					<td bgcolor="ccebff">Four</td>
+					<td bgcolor="b3d8fd"><img src="extra/cuatro-maya.png"></td>
+					<td bgcolor="ccebff">100</td>
+				</tr>
+				<tr>
+					<td bgcolor="b3d8fd">Cinco</td>
+					<td bgcolor="ccebff">Quinto</td>
+					<td bgcolor="b3d8fd">五</td>
+					<td bgcolor="ccebff">伍</td>
+					<td bgcolor="b3d8fd">Five</td>
+					<td bgcolor="ccebff"><img src="extra/cinco-maya.png"></td>
+					<td bgcolor="b3d8fd">101</td>
+				</tr>
+				<tr>
+					<td bgcolor="ccebff">Seis</td>
+					<td bgcolor="b3d8fd">Sexto</td>
+					<td bgcolor="ccebff">六</td>
+					<td bgcolor="b3d8fd">陸</td>
+					<td bgcolor="ccebff">Six</td>
+					<td bgcolor="b3d8fd"><img src="extra/seis-maya.png"></td>
+					<td bgcolor="ccebff">110</td>
+				</tr>
+				<tr>
+					<td bgcolor="b3d8fd">Siete</td>
+					<td bgcolor="ccebff">Séptimo</td>
+					<td bgcolor="b3d8fd">七</td>
+					<td bgcolor="ccebff">柒</td>
+					<td bgcolor="b3d8fd">Seven</td>
+					<td bgcolor="ccebff"><img src="extra/siete-maya.png"></td>
+					<td bgcolor="b3d8fd">111</td>
+				</tr>
+				<tr>
+					<td bgcolor="ccebff">Ocho</td>
+					<td bgcolor="b3d8fd">Octavo</td>
+					<td bgcolor="ccebff">八</td>
+					<td bgcolor="b3d8fd">捌</td>
+					<td bgcolor="ccebff">Eight</td>
+					<td bgcolor="b3d8fd"><img src="extra/ocho-maya.png"></td>
+					<td bgcolor="ccebff">1000</td>
+				</tr>
+				<tr>
+					<td bgcolor="b3d8fd">Nueve</td>
+					<td bgcolor="ccebff">Noveno</td>
+					<td bgcolor="b3d8fd">九</td>
+					<td bgcolor="ccebff">玖</td>
+					<td bgcolor="b3d8fd">Nine</td>
+					<td bgcolor="ccebff"><img src="extra/nueve-maya.png"></td>
+					<td bgcolor="b3d8fd">1001</td>
+				</tr>
+			</table> <!--</div>-->
 
 			</article>
 
