--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<li><a href="practica-2/p2.html">Práctica 2</a></li>
 		<li><a href="practica-3/p3.html">Práctica 3</a></li>
 		<li><a href="practica-4/p4.html">Práctica 4</a></li>
+		<li><a href="practica-5/p5.html">Práctica 5</a></li>
+		<li><a href="practica-6/p6.html">Práctica 6</a></li>
 	</div>
 	<div class="w3-container w3-center w3-black w3-padding-16 w3-bottom">
 		<p><b>Ian Svén</b> @ <a href="https://github.com/Soto2K1">Github</a></p>
