--- a/practica-6/p6.html
+++ b/practica-6/p6.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!doctype HTML> 
 
-</head>
+<html lang="es-MX">
+    <head>
+        <meta name="author" content="Ian Svén">
+        <meta name="description" content="Práctica 6">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <link rel="shortcut icon" href="extra/.png">
+        <link rel="stylesheet" type="text/css" href="extra/style-p6.css">
+        <link rel="stylesheet" type="text/css" href="../css/layout.css">
+        <link rel="stylesheet" type="text/css" href="../css/w3.css">
+
+        <title> Práctica No. 6 </title>
+    </head>
 <body>
-	<iframe src="tomate_1.htm"> </frame>
-	<iframe src="tomate_1.htm"> </frame>
+	<div class=w3-margin-top>
+	<iframe src="tomate_1.htm" height="500px" width="400px" > </iframe>
+	<iframe src="tomate_2.htm" height="500px" width="400px"> </iframe>
+	<iframe src="tomate_3.htm" height="500px" width="400px"> </iframe>
+	</div>
+
+	<br><br><br><br>
+	<div class="footer">
+		<div class="w3-bar w3-bottom w3-light-gray w3-wide w3-padding-8 w3-card-2">
+			<a href="../index.html" class="w3-margin-left w3-bar-item w3-button"> <b> Ian Svén </b> </a>
+		</div>
+	</div>
 </body>
 </html
