--- a/practica-1/p1.html
+++ b/practica-1/p1.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="CBTis No. 41">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="../css/w3.css">
 	<link rel="stylesheet" type="text/css" href="Extra/style-p1.css">
 
 </head>
@@ -14,7 +15,7 @@
 <body>
 	<center>
 		<img src="Extra/maeve.png" alt="Maeve Art" style="width:263px;height:316px;">
-		<h1 style=color:purple> Maeve, of Blades </h1>
+		<h1 style=color:purple> <b> Maeve, of Blades </b> </h1>
 	</center>
 	<p> <b> Maeve </b> es,
 		<k>al momento de escribir esto </k>, el campe&oacute;n (personaje) m&aacute;s reciente del videojuego de disparos en primera persona
@@ -27,6 +28,12 @@
 	<p style="font:14"> La imagen utilizada pertenece a <a href="https://twitter.com/SheNobody_"> SheNobody. </a>
 
 		<footer> Ian Svén <br>4BMP </footer>
+
+	<div class="footer">
+		<div class="w3-bar w3-bottom w3-light-gray w3-wide w3-padding-8 w3-card-2">
+			<a href="../index.html" class="w3-margin-left w3-bar-item w3-button"> <b> Ian Svén </b> </a>
+		</div>
+	</div>
 
 </body>
 
