--- a/practica-8/p8.html
+++ b/practica-8/p8.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Práctica 8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="extra/.png">
+        <link rel="shortcut icon" href="extra/icon.png">
         <link rel="stylesheet" type="text/css" href="extra/style-p8.css">
         <link rel="stylesheet" type="text/css" href="extra/layout.css">
         <link rel="stylesheet" type="text/css" href="extra/w3.css">
@@ -43,7 +43,7 @@
 
                 <div class="form">    
                 <center> 
-                <form action="p8.php">
+                <form action="soto2k1.000webhostapp.com/practica-8/p8.php">
                     <b> Valor de la base: </b> <br>
                     <input type="number" name="base" min="0" step="any" value="1"> <br>
                     <b> Valor de la altura: </b> <br> 
