--- a/practica-7/p7.html
+++ b/practica-7/p7.html
@@ -43,7 +43,7 @@
 
                 <div class="form">    
                 <center> <h2> <b> Cambio de pesos a dólares</b> </h2> 
-                <form action="p7.php">
+                <form action="http://soto2k1.000webhostapp.com/practica-7/p7.html">
                     <b> Cantidad en pesos: </b> <br>
                     <input type="number" name="peso" min="0" step="any" value="0"> <br>
                     <b> Tasa de cambio: </b> <br> 
