--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="es-MX">
 
 <head>
@@ -25,6 +25,8 @@
 		<li><a href="practica-4/p4.html">Práctica 4</a></li>
 		<li><a href="practica-5/p5.html">Práctica 5</a></li>
 		<li><a href="practica-6/p6.html">Práctica 6</a></li>
+		<li><a href="practica-7/p7.html">Práctica 7</a></li>
+		<li><a href="practica-8/p8.html">Práctica 8</a></li>
 	</div>
 	<div class="w3-container w3-center w3-black w3-padding-16 w3-bottom">
 		<p><b>Ian Svén</b> @ <a href="https://github.com/Soto2K1">Github</a></p>
