--- a/practica-7/p7.html
+++ b/practica-7/p7.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Práctica 7">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="extra/.png">
+        <link rel="shortcut icon" href="extra/math.png">
         <link rel="stylesheet" type="text/css" href="extra/style-p7.css">
         <link rel="stylesheet" type="text/css" href="extra/layout.css">
         <link rel="stylesheet" type="text/css" href="extra/w3.css">
@@ -43,7 +43,7 @@
 
                 <div class="form">    
                 <center> <h2> <b> Cambio de pesos a dólares</b> </h2> 
-                <form action="http://soto2k1.000webhostapp.com/practica-7/p7.html">
+                <form action="http://soto2k1.000webhostapp.com/practica-7/p7.php">
                     <b> Cantidad en pesos: </b> <br>
                     <input type="number" name="peso" min="0" step="any" value="0"> <br>
                     <b> Tasa de cambio: </b> <br> 
