--- a/practica-8/p8.html
+++ b/practica-8/p8.html
@@ -43,7 +43,7 @@
 
                 <div class="form">    
                 <center> 
-                <form action="soto2k1.000webhostapp.com/practica-8/p8.php">
+                <form action="https://soto2k1.000webhostapp.com/practica-8/p8.php">
                     <b> Valor de la base: </b> <br>
                     <input type="number" name="base" min="0" step="any" value="1"> <br>
                     <b> Valor de la altura: </b> <br> 
