--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 		<li><a href="practica-6/p6.html">Práctica 6</a></li>
 		<li><a href="practica-7/p7.html">Práctica 7</a></li>
 		<li><a href="practica-8/p8.html">Práctica 8</a></li>
+		<li><a href="practica-9/p9.html">Práctica 9</a></li>
+		<li><a href="practica-10/p10.html">Práctica 10</a></li>
 	</div>
 	<div class="w3-container w3-center w3-black w3-padding-16 w3-bottom">
 		<p><b>Ian Svén</b> @ <a href="https://github.com/Soto2K1">Github</a></p>
