--- a/practica-9/p9.html
+++ b/practica-9/p9.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Práctica 9">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="extra/.png">
+        <link rel="shortcut icon" href="extra/icon.png">
         <link rel="stylesheet" type="text/css" href="extra/style-p9.css">
         <link rel="stylesheet" type="text/css" href="../css/w3.css">
         <link rel="stylesheet" type="text/css" href="../css/layout.css">
@@ -16,7 +16,7 @@
 
     </head>
 
-    <body background="extra/.png">
+    <body>
 
         <div class="flex-container">
 
