--- a/practica-9/p9.html
+++ b/practica-9/p9.html
@@ -45,7 +45,7 @@
 
                 <div class="form">    
                 <center> 
-                <form action="soto2k1.000webhostapp.com/practica-9/p9.php" method="get">
+                <form action="http://soto2k1.000webhostapp.com/practica-9/p9.php" method="get">
                     <input type="radio" name="fig" value="sqr"> Cuadrado <br>
                     <input type="radio" name="fig" value="tri"> Triángulo <br>
                     <input type="radio" name="fig" value="rec"> Rectángulo <br>
