--- a/practica-9/p9.html
+++ b/practica-9/p9.html
@@ -46,7 +46,7 @@
                 <div class="form">    
                 <center> 
                 <form action="http://soto2k1.000webhostapp.com/practica-9/p9.php" method="get">
-                    <input type="radio" name="fig" value="sqr" checked="checked"> Cuadrado <br>
+                    <input type="radio" name="fig" value="sqr"> Cuadrado <br>
                     <input type="radio" name="fig" value="tri"> Triángulo <br>
                     <input type="radio" name="fig" value="rec"> Rectángulo <br>
                     <input type="radio" name="fig" value="cir"> Círculo <br><br>
