--- a/practica-10/p10.html
+++ b/practica-10/p10.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta name="author" content="Ian Svén">
-        <meta name="description" content="Práctica 9">
+        <meta name="description" content="Práctica 10">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="shortcut icon" href="extra/icon.png">
@@ -31,7 +31,8 @@
                     <li> <a href="../practica-6/p6.html" class=w3-button> Práctica 6 </a> </li>
                     <li> <a href="../practica-7/p7.html" class=w3-button> Práctica 7 </a> </li>
                     <li> <a href="../practica-8/p8.html" class=w3-button> Práctica 8 </a> </li>
-                    <li> <a href="../practica-9/p9.html" class="w3-button"> Práctica 9 </a> </li>
+                    <li> <a href="../practica-9/p9.html" class=w3-button> Práctica 9 </a> </li>
+                    <li> <a href="#" class="w3-button w3-disabled"> Práctica 10 </a> </li>
                     <br> <br>
                 </ul>
             </nav>
@@ -46,8 +47,12 @@
                 <center> 
                 <form action="p10.php" method="post">
                     <input type="checkbox" name="iro[]" value="Rojo"> <b>Rojo</b><br>
-			        <input type="checkbox" name="iro[]" value="Verde"> <b>Verde</b><br>
-                    <input type="checkbox" name="iro[]" value="Azul"> <b>Azul</b><br><br>
+		    <input type="checkbox" name="iro[]" value="Naranja"> <b>Naranja</b><br>
+                    <input type="checkbox" name="iro[]" value="Amarillo"> <b>Amarillo</b><br>
+		    <input type="checkbox" name="iro[]" value="Verde"> <b>Verde</b><br>
+                    <input type="checkbox" name="iro[]" value="Cyan"> <b>Cyan</b><br>
+		    <input type="checkbox" name="iro[]" value="Azul"> <b>Azul</b><br>
+                    <input type="checkbox" name="iro[]" value="Violeta"> <b>Violeta</b><br><br>
                     <input type="submit" value="Aceptar">
                 </form> </center> </div>
             </article>
