--- a/practica-10/p10.html
+++ b/practica-10/p10.html
@@ -45,7 +45,7 @@
 
                 <div class="form">    
                 <center> 
-                <form action="p10.php" method="post">
+                <form action="http://soto2k1.000webhostapp.com/practica-10/p10.php" method="post">
                     <input type="checkbox" name="iro[]" value="Rojo"> <b>Rojo</b><br>
 		    <input type="checkbox" name="iro[]" value="Naranja"> <b>Naranja</b><br>
                     <input type="checkbox" name="iro[]" value="Amarillo"> <b>Amarillo</b><br>
